# rpg_ig_active_reconstruction

./: README.md  commands.txt
baxter_ig_interface/: CMakeLists.txt  package.xml
baxter_ig_interface/config/: both_arms.txt  both_arms_simple.txt  workspace_exploration.txt
baxter_ig_interface/include/baxter_ig_interface/: baxter_communication_interface.hpp  baxter_controller.hpp  pcl_rerouter.hpp
baxter_ig_interface/launch/: baxter.launch  simple_viewspace_module.launch
baxter_ig_interface/scripts/: viewspace_ui.py
baxter_ig_interface/src/code_base/: baxter_communication_interface.cpp  baxter_controller.cpp  pcl_rerouter.cpp
baxter_ig_interface/src/ros_nodes/: baxter_robot_interface.cpp  baxter_viewspace_learner.cpp
baxter_pointcloud_correction/: CMakeLists.txt  package.xml  setup.py
baxter_pointcloud_correction/cfg/: SegmentationParameters.cfg
baxter_pointcloud_correction/data/: gripper_base_unregistered.pcd
baxter_pointcloud_correction/launch/: correction_server.launch
baxter_pointcloud_correction/scripts/: baxter_rotate_gripper.py
baxter_pointcloud_correction/src/: model_composer.cpp  pointcloud_segmentation_server.cpp  registration_to_model_server.cpp
ig_active_reconstruction/include/ig_active_reconstruction/: view_space.hpp  views_communication_interface.hpp
ig_active_reconstruction/src/code_base/: view_space.cpp
ig_active_reconstruction_msgs/: CMakeLists.txt
ig_active_reconstruction_octomap/launch/: octomap_world_representation.launch
ig_active_reconstruction_ros/include/ig_active_reconstruction_ros/: views_ros_client_ci.hpp  views_ros_server_ci.hpp
ig_active_reconstruction_ros/src/code_base/: views_ros_client_ci.cpp  views_ros_server_ci.cpp
